Reduce width, reduce wrapping, fix needsinfo
* Ricky mentioned that the width shouldn't be 1200 and should be more
  like 960. I was like, OMG! YOU HAVE RETINA! He then told me how he
  sets things up. So this reduces the width.
* One thing I disliked was that the sort buttons would wrap to the next
  line in the Pri column. This fixes that.
* This now tells you who the bug needsinfo from. Previously, it would
  just spit out email addresses--EW! Now it does some horrible stuff
  to figure out the "username" (which we hope is useful) and uses that.

Fixes #26

--- a/ernest/static/css/ernest.css
+++ b/ernest/static/css/ernest.css
@@ -12,7 +12,11 @@
 
 .container {
     /* FIXME - srsly. */
-    width: 1200px;
+    width: 1000px;
+}
+
+th {
+    white-space: nowrap;
 }
 
 #bug-table {
